buildscript {
    ext.kotlin_version = '1.2.41'

    repositories {
        mavenCentral()
    }

    dependencies {
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
    }
}

apply plugin: 'application'
apply plugin: 'kotlin'

sourceCompatibility = 1.10
targetCompatibility = 1.10

repositories {
	mavenCentral()
	jcenter()
    maven { url "https://jitpack.io" }
}

sourceSets {
    main.kotlin.srcDirs += main.java.srcDirs
}

dependencies {
	compile 'org.joml:joml:1.9.9'
	compile project(':objkt-engine')
	compile project(':objkt-glfw')
	compile 'org.lwjgl:lwjgl-glfw:3.1.6'
	runtime 'org.lwjgl:lwjgl-glfw:3.1.6:natives-windows'
	compile 'org.lwjgl:lwjgl:3.1.6'
	runtime 'org.lwjgl:lwjgl:3.1.6:natives-windows'
	runtime 'org.lwjgl:lwjgl-opengl:3.1.6:natives-windows'
	compile 'org.fusesource.jansi:jansi:1.17'
    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
    compile "com.github.fewizz:GLWrap:eb20ef1a6c"
}

compileKotlin {
    kotlinOptions {
        jvmTarget = "1.8"
    }
}
compileTestKotlin {
    kotlinOptions {
        jvmTarget = "1.8"
    }
}

mainClassName = "cubic.Cubic"